<resources>
    <string name="app_name">ShiftLog</string>
    <string name="save_settings">Save Settings</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="shift_log_settings">Shift Log Settings</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="shift_log">Shift Log</string>
    <string name="shift_log_extra"> </string>
    <string name="new_shift">New Shift</string>
    <string name="settings">Settings</string>
    <string name="view_shifts">View Shifts</string>
    <string name="background">Background</string>
    <string name="date_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="delete_shift">Delete Shift</string>
    <string name="shift_start">Shift Start</string>
    <string name="break_minutes_unpaid">Break Minutes (Unpaid)</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="shift_end">Shift End</string>
    <string name="save_shift">Save Shift</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="week_commencing">Week Commencing</string>
    <string name="hours">Hours</string>
    <string name="breaks">Break</string>
    <string name="pay">Pay</string>
    <string name="tips">Tips</string>
    <string name="data_utilities">Data Utilities</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="no_shifts_for_this_period">No shifts for this period</string>
    <string name="edit_shift">Edit Shift</string>
    <string name="shift_deleted">"Shift Deleted</string>
    <string name="error_deleting_shift">"Error deleting Shift"</string>
    <string name="error_creating_shift">"Error creating Shift"</string>
    <string name="error_updating_shift">"Error updating Shift"</string>

    <string name="export">Export</string>
    <string name="file_utilities">File Utilities</string>
    <string name="importButton">Import</string>
    <string name="message_import">Importing… Please wait :)</string>
    <string name="message_import_complete">"Import Complete"</string>
    <string name="message_export">Exporting… Please wait :)</string>
    <string name="message_export_complete">"Export Complete"</string>
    <string name="message_export_error">"Export Error"</string>
    <string name="import_summary_text">Lines - Errors</string>
    <string name="about_info">"By Lee J Walker  "</string>
    <string name="aboutEmail">floatybloke@gmail.com</string>
    <string name="aboutEmailHTML"><![CDATA[ contact us at <a href=\"mailto:floatybloke@gmail.com\">floatybloke@gmail.com</a>]]></string>

    <string name="file_information">"               This area is for importing and exporting\n       File should be comma delimited text with the following layout\n       Start DateTime, End DateTime, Break Hours, Hours Worked, Hourly Rate, Pay, Tips/n                  eg.       2014–01-13 08:00,2014-01-13 14:30,0.0,6.5,6.0,39.0,23.0      "</string>
    <string name="log_text">Log Text</string>
    <string name="log_information">Log Information</string>
    <string name="about_version">Version</string>
    <string name="burnley">Burnley</string>
    <string name="barnsley">Barnsley</string>
    <string name="show_tips">Show Tips On Summary</string>


    <string-array name="breakChoices">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
    </string-array>

    <string-array name="dayOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="dateFormats">
        <item>dd/MM/yyyy</item>
        <item>dd/MM/yy</item>
        <item>dd-MMM-yyyy</item>
        <item>MMM dd yyyy</item>
    </string-array>
    <string-array name="timeFormats">
        <item>HH:mm</item>
        <item>h:mm a</item>
    </string-array>
    <string-array name="yesNo">
        <item>No</item>
        <item>Yes</item>
    </string-array>

</resources>
