<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/drippy_bg2"
    android:backgroundTint="@color/white_semit"
    android:backgroundTintMode="src_over"
    tools:context=".Controller.MainActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_log"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btnNewShift"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/wak_shadow"
        android:text="@string/new_shift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <Button
        android:id="@+id/btnViewShifts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/wak_shadow"
        android:text="@string/view_shifts"
        app:layout_constraintEnd_toEndOf="@+id/btnNewShift"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNewShift"
        app:layout_constraintTop_toBottomOf="@+id/btnNewShift" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/wak_shadow"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="@+id/btnViewShifts"
        app:layout_constraintStart_toStartOf="@+id/btnViewShifts"
        app:layout_constraintTop_toBottomOf="@+id/btnViewShifts" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.095759235" />

</androidx.constraintlayout.widget.ConstraintLayout>