<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Settings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shift_log_settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:height="45dp"
        android:autofillHints=""
        android:background="@drawable/box_main"
        android:duplicateParentState="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:inputType="text"
        android:shadowDy="10"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUserNameHead" />

    <TextView
        android:id="@+id/txtUserNameHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_header"
        android:text="@string/user_name"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:height="45dp"
        android:autofillHints=""
        android:background="@drawable/box_main"
        android:duplicateParentState="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email_address"
        android:inputType="text|textEmailAddress"
        android:shadowDy="10"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEmailHead" />

    <TextView
        android:id="@+id/txtEmailHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box_header"
        android:text="@string/email_address"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

    <EditText
        android:id="@+id/edtShiftHourlyRate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:height="45dp"
        android:autofillHints=""
        android:background="@drawable/box_main"
        android:duplicateParentState="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hourly_rate"
        android:inputType="none|numberDecimal"
        android:shadowDy="10"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtHourlyRateHead" />

    <TextView
        android:id="@+id/txtHourlyRateHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box_header"
        android:text="@string/hourly_rate"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Spinner
        android:id="@+id/dowSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/box_main"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtWeekStartHead" />

    <TextView
        android:id="@+id/txtWeekStartHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box_header"
        android:text="@string/first_day_of_week"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtShiftHourlyRate" />

    <Spinner
        android:id="@+id/dformatSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/box_main"
        android:popupBackground="@drawable/edge_line"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtDateFormatHead" />

    <TextView
        android:id="@+id/txtDateFormatHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/box_header"
        android:text="@string/date_format"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dowSpinner" />

    <Spinner
        android:id="@+id/tformatSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/box_main"
        android:popupBackground="@drawable/edge_line"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTimeFormatHead" />

    <TextView
        android:id="@+id/txtTimeFormatHead"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/box_header"
        android:text="@string/time_format"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dformatSpinner" />

    <Button
        android:id="@+id/btnFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/box_main"
        android:text="File Stuff"
        app:layout_constraintBottom_toTopOf="@+id/btnSettingsSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSettingsSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/box_main"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>